# console-video-player

video-encoder/: CMakeLists.txt  command_line.cpp  command_line.h  encode.cpp  image_processing.cpp  image_processing.h
video-player/: play.cpp
